--- a/ui-v2/app/styles/components/product/footer.scss
+++ b/ui-v2/app/styles/components/product/footer.scss
@@ -5,7 +5,7 @@
   border-top: $decor-border-100;
 }
 %footer {
-  border-color: $keyline-darker;
+  border-color: $keyline-mid;
   background-color: $ui-white;
 }
 %footer > * {
