--- a/ui-v2/app/styles/variables/index.scss
+++ b/ui-v2/app/styles/variables/index.scss
@@ -1,12 +1,13 @@
 @import './custom-query';
 $gray: $ui-gray-200;
+$ui-gray-025: #fafbfc;
 
 $magenta-800-url-encoded: %235a1434;
 
 $keyline-light: $ui-gray-100; // h1
-$keyline-mid: $ui-gray-200; // td
-$keyline-dark: $ui-gray-400; // th
-$keyline-darker: $ui-gray-300; //footer
+$keyline-mid: $ui-gray-200; // td, footer
+$keyline-dark: $ui-gray-300; // th
+$keyline-darker: $ui-gray-400;
 
 // decoration
 // undecided
